--- a/seller.html
+++ b/seller.html
@@ -11,7 +11,7 @@
     form input, form textarea { width: 100%; margin: 0.6rem 0; padding: 0.5rem; font-size: 1rem; border: 1.5px solid #ddd; border-radius: 4px; }
     form button { background: #0070f3; border: none; padding: 0.7rem 1.2rem; color: white; font-size: 1rem; border-radius: 4px; cursor: pointer; margin-top: 1rem; }
     form button:hover { background: #005bb5; }
-    #products-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; }
+    #products-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); gap: 1rem; }
     .product-card { background: white; border-radius: 6px; padding: 1rem; box-shadow: 0 1px 5px rgba(0,0,0,0.1); text-align: center; }
     .product-card img { width: 120px; height: 120px; object-fit: contain; margin-bottom: 0.7rem; }
     .product-name { font-weight: 600; margin-bottom: 0.5rem; color: #0070f3; }
@@ -23,6 +23,13 @@
     nav button#orders-btn { background:#0070f3;}
     nav button#profile-btn { background:#27ae60; }
     nav button:hover { opacity:0.88;}
+    .edit-btn { background:#27ae60!important; margin-top:7px;}
+    .delete-btn { background:#e74c3c!important; margin-top:7px;}
+    .cancel-edit-btn { background:#e74c3c!important; margin-left:8px;}
+    .stock-label { font-weight:bold; margin-top:0.42rem; display:inline-block; padding: 2px 7px; border-radius: 8px;}
+    .in-stock { background: #e6ffe4; color: #158a00;}
+    .out-stock { background: #ffebeb; color: #c0392b;}
+    .stock-edit-label {font-size:0.97rem;padding:0 3px;}
   </style>
 </head>
 <body>
@@ -35,14 +42,17 @@
   </div>
 </nav>
 
-<form id="add-product-form">
+<form id="product-form">
+  <input type="hidden" id="prod-id" />
   <input type="text" id="prod-name" placeholder="Product Name" required />
   <input type="text" id="category" placeholder="Category" required />
   <input type="text" id="hsn-code" placeholder="HSN Code" required />
   <input type="number" id="prod-price" placeholder="Price (₹)" required />
+  <input type="number" id="prod-stock" placeholder="Stock (Qty)" min="0" required />
   <textarea id="prod-desc" placeholder="Description"></textarea>
   <input type="file" id="prod-image-file" accept="image/*" />
   <button type="submit">Add Product</button>
+  <button type="button" id="cancel-edit-btn" class="cancel-edit-btn" style="display:none;">Cancel Edit</button>
 </form>
 
 <h2>Your Products</h2>
@@ -79,7 +89,7 @@
     }
     if (!data.gst_number || !data.pan_number) {
       alert('Please update your GST and PAN numbers in your profile before adding products.');
-      window.location.href = 'profile.html'; // Redirect to profile
+      window.location.href = 'profile.html';
     }
   }
 
@@ -96,16 +106,18 @@
     const { data: urlData } = supabase.storage
       .from('product-images')
       .getPublicUrl(fileName);
-
     return urlData.publicUrl;
   }
 
-  document.getElementById('add-product-form').onsubmit = async (e) => {
+  // Handle Add / Edit product
+  document.getElementById('product-form').onsubmit = async function(e) {
     e.preventDefault();
+    const prodId = document.getElementById('prod-id').value || null;
     const name = document.getElementById('prod-name').value;
     const category = document.getElementById('category').value;
     const hsn_code = document.getElementById('hsn-code').value;
     const price = parseInt(document.getElementById('prod-price').value, 10);
+    const stock = parseInt(document.getElementById('prod-stock').value, 10);
     const description = document.getElementById('prod-desc').value;
     const fileInput = document.getElementById('prod-image-file');
     let image_url = '';
@@ -114,24 +126,46 @@
       image_url = await uploadImage(fileInput.files[0]);
     }
 
-    const { error } = await supabase.from('products').insert([{
+    let productData = {
       seller_id: sellerId,
       name,
       category,
       hsn_code,
       price,
-      description,
-      image_url
-    }]);
+      stock,
+      description
+    };
+    if (image_url) productData.image_url = image_url;
 
-    if (error) {
-      alert('Failed to add product: ' + error.message);
+    if (prodId) {
+      const { error } = await supabase.from('products')
+        .update(productData)
+        .eq('id', prodId);
+      if (error) {
+        alert('Failed to update product: ' + error.message);
+      } else {
+        alert('Product updated successfully!');
+        resetForm();
+        loadSellerProducts();
+      }
     } else {
-      alert('Product added successfully!');
-      loadSellerProducts();
-      e.target.reset();
+      const { error } = await supabase.from('products').insert([productData]);
+      if (error) {
+        alert('Failed to add product: ' + error.message);
+      } else {
+        alert('Product added successfully!');
+        resetForm();
+        loadSellerProducts();
+      }
     }
   };
+
+  function resetForm() {
+    document.getElementById('product-form').reset();
+    document.getElementById('prod-id').value = '';
+    document.getElementById('cancel-edit-btn').style.display = 'none';
+    document.querySelector("#product-form button[type=submit]").textContent = "Add Product";
+  }
 
   async function loadSellerProducts() {
     const { data, error } = await supabase.from('products').select('*').eq('seller_id', sellerId);
@@ -151,11 +185,47 @@
         <div><b>HSN Code:</b> ${prod.hsn_code || '-'}</div>
         <div class="product-price">₹${prod.price}</div>
         <div class="product-desc">${prod.description || ''}</div>
+        <div>
+          <span class="stock-label ${prod.stock > 0 ? 'in-stock':'out-stock'}">
+            ${prod.stock > 0 ? 'In Stock (' + prod.stock + ')':'Out of Stock'}
+          </span>
+        </div>
+        <button class="edit-btn" onclick="editProduct('${prod.id}')">Edit</button>
+        <button class="delete-btn" onclick="deleteProduct('${prod.id}')">Delete</button>
       `;
       container.appendChild(div);
     });
   }
 
+  window.editProduct = async function(prodId) {
+    const { data: prod, error } = await supabase.from('products').select('*').eq('id', prodId).single();
+    if (error || !prod) {
+      alert('Failed to load product for editing.');
+      return;
+    }
+    document.getElementById('prod-id').value = prod.id;
+    document.getElementById('prod-name').value = prod.name;
+    document.getElementById('category').value = prod.category;
+    document.getElementById('hsn-code').value = prod.hsn_code;
+    document.getElementById('prod-price').value = prod.price;
+    document.getElementById('prod-stock').value = prod.stock;
+    document.getElementById('prod-desc').value = prod.description || "";
+    document.getElementById('cancel-edit-btn').style.display = "inline-block";
+    document.querySelector("#product-form button[type=submit]").textContent = "Update Product";
+  };
+
+  window.deleteProduct = async function(prodId) {
+    if (!confirm('Are you sure you want to delete this product?')) return;
+    const { error } = await supabase.from('products').delete().eq('id', prodId);
+    if (error) {
+      alert('Failed to delete product: ' + error.message);
+    } else {
+      alert('Product deleted successfully!');
+      loadSellerProducts();
+    }
+  };
+
+  document.getElementById('cancel-edit-btn').onclick = resetForm;
   document.getElementById('profile-btn').onclick = () => window.location.href = 'profile.html';
   document.getElementById('orders-btn').onclick = () => window.location.href = 'seller_order.html';
   document.getElementById('logout-btn').onclick = async () => {
